# design_patterns_in_modern_cpp

./: .gitignore
Behavioral_Patterns/Command/: CMakeLists.txt  main.cpp
Behavioral_Patterns/Mediation/: CMakeLists.txt  main.cpp  user_signal.cpp
Behavioral_Patterns/Memento/: CMakeLists.txt  main.cpp
Behavioral_Patterns/Observer/: CMakeLists.txt  main.cpp
Behavioral_Patterns/State/: CMakeLists.txt  classic_state.cpp  classic_state.hpp  main.cpp
Behavioral_Patterns/Strategy/: CMakeLists.txt  main.cpp
Behavioral_Patterns/Template_Method/: template.cpp
Behavioral_Patterns/Visitor/: CMakeLists.txt  expression.hpp  main.cpp
Creational_Patterns/Factory/: CMakeLists.txt  directxrenderer.hpp  main.cpp  openglrenderer.hpp  renderer.hpp  rendererfactory.cpp  rendererfactory.hpp
Creational_Patterns/Singleton/: a.out  dbSingleton.hpp  main.cpp
Structural_Patterns/Composite/: grouping_graphic_object.cpp
